fms-deployments/mongo-stack.yaml
# Mongodb Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:3.6.5-jessie
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: "/data/db"

      volumes:
        - name: mongo-persistent-storage
        # pointer to the configuration of How the mount is to be implemented
          persistentVolumeClaim:
            claimName: mongo-pvc

---
# Mongodb Services
apiVersion: v1
kind: Service
metadata:
  name: fleetman-mongodb
spec:
  selector:
    app: mongodb

  ports:
    - name: mongoport
      port: 27017
  type: ClusterIP
