fms-deployments/services.yaml
# Queue Service
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue

spec:
  selector:
    app: queue

  ports:
  - name: http
    port: 8161

  type: ClusterIP

---
# Position-tracker Service
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker

spec:
  selector:
    app: position-tracker

  ports:
  - name: http
    port: 8080

  type: ClusterIP

---
# API-gateway Service
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway

spec:
  selector:
    app: api-gateway

  ports:
  - name: http
    port: 8080

  type: ClusterIP

---
# Frontend (webapp) Service
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
  selector:
    app: webapp

  ports:
  - name: http
    port: 80
  type: LoadBalancer
