fms-deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-project
  namespace: default
spec:
  ingressClassName: nginx
  rules:

  - host: chichieo.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp
            port:
              number: 80
